@@ -1,3 +1,7 @@
+2005-06-07  Pavel Tsekov <ptsekov@gmx.net>
+
+        * subshell.c (exit_subshell): Do not blindly perform cleanup.
+
 2005-06-07  Roland Illig  <roland.illig@gmx.de>
 
 	* view.c (view_ccache_lookup): Replaced the min_nroff_column
